<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Izanagi for Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_username_hint">ユーザID</string>
    <string name="login_password_hint">パスワード</string>
    <string name="login_login_button">ログイン</string>
    <string name="login_signup_button">新規登録</string>
    <string name="login_newuser_canvassing">IzanagiユーザIDをお持ちでない場合</string>
    
    <string name="newuser_newuser">新規ユーザ登録</string>
    <string name="newuser_username">希望するユーザID</string>
    <string name="newuser_password">パスワード</string>
    <string name="newuser_password_again">パスワード(再入力)</string>
    <string name="newuser_email">メールアドレス</string>
    <string name="newuser_institution_grade">所属機関</string>
    <string name="newuser_institution">機関</string>
    <string name="newuser_grade">学年</string>    
    <string name="newuser_username_hint">Username</string>
    <string name="newuser_password_hint">Password</string>
    <string name="newuser_email_hint">E-mail</string>
    <string name="newuser_grade_hint">1</string>
    <string name="newuser_signup_button_text">新規登録</string>
    <string name="newuser_cansel_button_text">キャンセル</string> 
    
    <string name="store_search_hint">search</string>
    
    <string name="listlayout_date">2014/8/18</string>
    
    <string name="menu_myapps">My Apps</string>
    <string name="menu_dlapps">DL Apps</string>
    <string name="menu_store">Store</string>
    
    <string name="noconnection_display_text">Not connected.</string>
    <string name="noconnection_reconnect_button_text">Connect</string>
</resources>
